--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,10 +4,11 @@
 <body>
   <%- include("./partials/nav.ejs") %>
 
-  <div class="about content">
+  <div class="about">
     <div id='kite'></div>
-    <div class="yellow"></div>
-    <h2>About Us</h2>
+    <div class="aboutus">
+      <h2>About Us</h2>
+    </div>
     <p>Please check out my portfolio at <a href='http://www.anhonestobserver.com'>http://www.anhonestobserver.com</a>, my LinkedIn at <a href='https://www.linkedin.com/in/andrewcbuensalida/'>https://www.linkedin.com/in/andrewcbuensalida/</a>', and my GitHub at <a href="https://github.com/andrewcbuensalida">https://github.com/andrewcbuensalida</a>. I have built full-stack websites/web applications such as an Instagram clone, web scrapers, games, and machine learning apps, with front-end technologies such as React and back-end servers such as Node, together with databases such as MongoDB, PostgreSQL, Firebase, all hosted in cloud platforms such as Amazon Web Services and Google Cloud Platform.</p>
     <%- include("./partials/footer.ejs") %>
   </div>
