--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,29 @@
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap");
+@-webkit-keyframes lowerBulb {
+  from {
+    top: -700px;
+    left: -600px;
+    width: 200vw;
+  }
+  to {
+    top: -350px;
+    left: 0px;
+    width: 100vw;
+  }
+}
+@keyframes lowerBulb {
+  from {
+    top: -700px;
+    left: -600px;
+    width: 200vw;
+  }
+  to {
+    top: -350px;
+    left: 0px;
+    width: 100vw;
+  }
+}
+
 @font-face {
   font-family: Biko;
   src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/biko-black.woff");
@@ -85,6 +111,7 @@
 body {
   width: 100%;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 body #navBar {
@@ -790,46 +817,105 @@ body .about {
   width: 100vw;
 }
 
-body .about #kite {
-  background-image: url("kite.jpg");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  height: 100vh;
-  width: 100vw;
-  position: relative;
-  background-attachment: fixed;
-  background-position-y: 45px;
+body .about #bulb {
+  -webkit-animation-name: lowerBulb;
+          animation-name: lowerBulb;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  position: absolute;
+  z-index: -1;
+}
+
+body .about .hoverMask {
+  position: absolute;
+  left: 35%;
+  top: 10%;
+  width: 30%;
+  height: 70%;
+}
+
+body .about .hoverMask .light {
+  position: absolute;
+  left: 52%;
+  top: 25%;
+  width: 0px;
+  height: 50%;
+  -webkit-transition-property: -webkit-box-shadow;
+  transition-property: -webkit-box-shadow;
+  transition-property: box-shadow;
+  transition-property: box-shadow, -webkit-box-shadow;
+  -webkit-transition-duration: 0.8s;
+          transition-duration: 0.8s;
+}
+
+body .about .hoverMask:hover .light {
+  position: absolute;
+  left: 52%;
+  top: 25%;
+  width: 0px;
+  height: 50%;
+  -webkit-box-shadow: 0 0 200px 100px #f5ffbb;
+          box-shadow: 0 0 200px 100px #f5ffbb;
+  -webkit-transition-property: -webkit-box-shadow;
+  transition-property: -webkit-box-shadow;
+  transition-property: box-shadow;
+  transition-property: box-shadow, -webkit-box-shadow;
+  -webkit-transition-duration: 0.8s;
+          transition-duration: 0.8s;
 }
 
 body .about .aboutus {
   background-color: rgba(255, 255, 7, 0);
   position: absolute;
-  top: 200px;
+  top: 150px;
   width: 400px;
-  right: 50px;
+  right: 0vw;
   text-align: center;
   padding: 30px;
   border-radius: 5px;
   margin: 20px;
   font-size: 50px;
-  font-family: Biko;
+  font-family: "Comfortaa", cursive;
 }
 
 body .about .aboutus h2 {
-  color: #38ffee;
+  color: #3b3b3b;
 }
 
-body .about footer {
+body .about #about2 {
+  font-family: "Comfortaa", cursive;
   position: relative;
-  bottom: 0;
-  width: 100%;
+  height: 100vh;
+  width: 40vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 30px;
+  font-size: 25px;
+  text-align: right;
 }
 
-body footer {
-  background-color: #202020;
-  color: white;
-  text-align: center;
-  position: relative;
+body .about #about2 * {
+  line-height: 100px;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
+body .about #about2 img {
+  width: 40px;
+  border-radius: 3px;
 }
 
 .create-blog {
