--- a/public/styles.css
+++ b/public/styles.css
@@ -1,26 +1,52 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap");
 @-webkit-keyframes lowerBulb {
   from {
-    top: -700px;
-    left: -600px;
-    width: 200vw;
+    top: -50%;
+    left: 50%;
+    -webkit-transform: translate(-52%, -42%);
+            transform: translate(-52%, -42%);
+    width: 1600px;
   }
   to {
-    top: -350px;
-    left: 0px;
-    width: 100vw;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-52%, -42%);
+            transform: translate(-52%, -42%);
+    width: 1800px;
   }
 }
 @keyframes lowerBulb {
   from {
-    top: -700px;
-    left: -600px;
-    width: 200vw;
+    top: -50%;
+    left: 50%;
+    -webkit-transform: translate(-52%, -42%);
+            transform: translate(-52%, -42%);
+    width: 1600px;
   }
   to {
-    top: -350px;
-    left: 0px;
-    width: 100vw;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-52%, -42%);
+            transform: translate(-52%, -42%);
+    width: 1800px;
+  }
+}
+
+@-webkit-keyframes enableBulb {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 30%;
+  }
+}
+
+@keyframes enableBulb {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 30%;
   }
 }
 
@@ -824,7 +850,7 @@ body .about #bulb {
           animation-duration: 5s;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
-  position: absolute;
+  position: fixed;
   z-index: -1;
 }
 
@@ -832,8 +858,15 @@ body .about .hoverMask {
   position: absolute;
   left: 35%;
   top: 10%;
-  width: 30%;
   height: 70%;
+  -webkit-animation-name: enableBulb;
+          animation-name: enableBulb;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+  -webkit-animation-duration: 0s;
+          animation-duration: 0s;
 }
 
 body .about .hoverMask .light {
@@ -902,7 +935,7 @@ body .about #about2 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 30px;
+  padding: 60px;
   font-size: 25px;
   text-align: right;
 }
