--- a/public/styles.scss
+++ b/public/styles.scss
@@ -165,14 +165,24 @@
 }
 @keyframes lowerBulb {
 	from {
-		top: -700px;
-		left: -600px;
-		width: 200vw;
+		top: -50%;
+		left: 50%;
+		transform: translate(-52%, -42%);
+		width: 1600px;
 	}
 	to {
-		top: -350px;
-		left: 0px;
-		width: 100vw;
+		top: 50%;
+		left: 50%;
+		transform: translate(-52%, -42%);
+		width: 1800px;
+	}
+}
+@keyframes enableBulb {
+	from {
+		width: 0%;
+	}
+	to {
+		width: 30%;
 	}
 }
 $arrowColor: rgb(211, 211, 211);
@@ -657,15 +667,18 @@ body {
 			animation-name: lowerBulb;
 			animation-duration: 5s;
 			animation-fill-mode: forwards;
-			position: absolute;
+			position: fixed;
 			z-index: -1;
 		}
 		.hoverMask {
 			position: absolute;
 			left: 35%;
 			top: 10%;
-			width: 30%;
 			height: 70%;
+			animation-name: enableBulb;
+			animation-fill-mode: forwards;
+			animation-delay: 3s;
+			animation-duration: 0s;
 			.light {
 				position: absolute;
 				left: 52%;
@@ -714,7 +727,7 @@ body {
 			flex-direction: column;
 			justify-content: center;
 			align-items: center;
-			padding: 30px;
+			padding: 60px;
 			// text-indent: 50px;
 			font-size: 25px;
 			text-align: right;
