--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,5 +5,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="/styles.css" />
 	<title>Andrew's Blogs | <%= title %></title>
-	<!-- <script type="text/javascript" src="https://livejs.com/live.js"></script> -->
+	<!-- this is to auto reload during development -->
+	<script type="text/javascript" src="https://livejs.com/live.js"></script> 
+
 </head>
